# cpp_sources_analyzer

./: .gitignore  CMakeLists.txt  README.md
sources/: commandlineparser.cpp  commandlineparser.h  fileutils.cpp  fileutils.h  main.cpp
sources/include_guard/: includeguard.cpp  includeguard.h  sourcefile.cpp  sourcefile.h
